--- a/ansible/install_applications/roles/home-mosquitto.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/home-mosquitto.deploy/app/deploy/statefulSet.yaml.j2
@@ -22,7 +22,7 @@ spec:
         app-component: mosquitto
     spec:
       containers:
-      - image: "{{ mosquitto.container.image }}"
+      - image: "{{ mosquitto.container.image }}:{{ mosquitto.container.tag }}"
         name: mosquitto
         ports:
         - containerPort: 1883
