--- a/ansible/install_applications/roles/infra-docker-registry-ui.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry-ui.deploy/app/deploy/deployment.yaml.j2
@@ -22,7 +22,7 @@ spec:
         app-component: docker-registry-ui
     spec:
       containers:
-      - image: "{{ docker_registry_ui.container.image }}"
+      - image: "{{ docker_registry_ui.container.image }}:{{ docker_registry_ui.container.tag }}"
         name: docker-registry-ui
         ports:
         - containerPort: 8000
