--- a/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/statefulSet.yaml.j2
@@ -22,7 +22,7 @@ spec:
         app-component: registry
     spec:
       containers:
-      - image: "{{ docker_registry.container.image }}"
+      - image: "{{ docker_registry.container.image }}:{{ docker_registry.container.tag }}"
         name: docker-registry
         env:
         - name: REGISTRY_HTTP_ADDR
