--- a/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/statefulSet.yaml.j2
@@ -22,7 +22,7 @@ spec:
         app-component: gotify
     spec:
       containers:
-      - image: "{{ gotify.container.image }}"
+      - image: "{{ gotify.container.image }}:{{ gotify.container.tag }}"
         name: gotify
         ports:
         - containerPort: 80
