--- a/ansible/install_applications/roles/infra-reloader.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/infra-reloader.deploy/app/deploy/deployment.yaml.j2
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: reloader
-        image: "{{ reloader.container.image }}"
+        image: "{{ reloader.container.image }}:{{ reloader.container.tag }}"
         imagePullPolicy: IfNotPresent
         resources:
           requests:
