--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/zonemta-deployment.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/zonemta-deployment.yaml.j2
@@ -22,7 +22,7 @@ spec:
         app-component: zonemta
     spec:
       containers:
-      - image: "{{ zonemta.container.image }}"
+      - image: "{{ zonemta.container.image }}:{{ zonemta.container.tag }}"
         name: zonemta
         env:
         - name: NODE_OPTIONS
