--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/prometheus.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/prometheus.yaml.j2
@@ -13,8 +13,8 @@ spec:
     - name: alertmanager-main
       namespace: monitoring
       port: web
-  baseImage: "{{ prometheus.container.base_image }}"
-  version: "{{ prometheus.container.image_version }}"
+  baseImage: "{{ prometheus.container.image }}"
+  version: "{{ prometheus.container.tag }}"
   nodeSelector:
     beta.kubernetes.io/os: linux
     capability/general-purpose: 'yes'
