--- a/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/statefulset.yaml.j2
+++ b/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/statefulset.yaml.j2
@@ -38,7 +38,7 @@ spec:
           mountPath: {{ lemonldap.persistent_volume_path }}
       containers:
       - name: lemonldap
-        image: "{{ lemonldap.container.image }}"
+        image: "{{ lemonldap.container.image }}:{{ lemonldap.container.tag }}"
         ports:
           - containerPort: 80
             name: http
