--- a/ansible/install_applications/roles/auth-phpldapadmin.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/auth-phpldapadmin.deploy/app/deploy/deployment.yaml.j2
@@ -23,7 +23,7 @@ spec:
         app-component: phpldapadmin
     spec:
       containers:
-      - image: "{{ phpldapadmin.container.image }}"
+      - image: "{{ phpldapadmin.container.image }}:{{ phpldapadmin.container.tag }}"
         name: phpldapadmin
         ports:
           - containerPort: 80
