--- a/ansible/install_applications/roles/dev-gitlab.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/dev-gitlab.deploy/app/deploy/statefulSet.yaml.j2
@@ -22,7 +22,7 @@ spec:
         app-component: gitlab
     spec:
       containers:
-      - image: "{{ gitlab.container.image }}"
+      - image: "{{ gitlab.container.image }}:{{ gitlab.container.tag }}"
         name: gitlab
         ports:
         - containerPort: 80
