--- a/ansible/install_applications/roles/download-deluge.deploy/app/deploy/statefulset.yaml.j2
+++ b/ansible/install_applications/roles/download-deluge.deploy/app/deploy/statefulset.yaml.j2
@@ -23,7 +23,7 @@ spec:
     spec:
       initContainers:
       - name: inject-config
-        image: "{{ deluge.container.image }}"
+        image: "{{ deluge.container.image }}:{{ deluge.container.tag }}"
         command: [ "python3", "/tmp/config/mergeConf.py" ]
         volumeMounts:
         - name: deluge-config-pv-claim
@@ -31,7 +31,7 @@ spec:
         - name: deluge-config
           mountPath: /tmp/config
       containers:
-      - image: "{{ deluge.container.image }}"
+      - image: "{{ deluge.container.image }}:{{ deluge.container.tag }}"
         name: deluge
         ports:
         - containerPort: 8112
