--- a/ansible/install_applications/roles/home-roomassistant.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/home-roomassistant.deploy/app/deploy/deployment.yaml.j2
@@ -21,7 +21,7 @@ spec:
         app-component: roomassistant
     spec:
       containers:
-      - image: "{{ roomassistant.container.image }}"
+      - image: "{{ roomassistant.container.image }}:{{ roomassistant.container.tag }}"
         name: roomassistant
 {% if roomassistant.environment_variables | default({}) | length > 0 %}
         env:
