--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/deploy/deployment.yaml.j2
@@ -22,7 +22,7 @@ spec:
         app-component: release-watcher
     spec:
       containers:
-      - image: "{{ release_watcher.container.image }}"
+      - image: "{{ release_watcher.container.image }}:{{ release_watcher.container.tag }}"
         name: release-watcher
         ports:
         - containerPort: 8080
