Add elasticsearch_exporter in release watcher

--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -231,6 +231,15 @@ watchers:
       - latest
   - type: docker_registry
     repo: registry-1.docker.io
+    image: {{ elasticsearch_exporter.container.image }}
+    tag: {{ elasticsearch_exporter.container.tag }}
+    excludes:
+      - latest
+      - ^0\..*
+      - ^1\.0\..*
+      - .*rc.*
+  - type: docker_registry
+    repo: registry-1.docker.io
     image: {{ fluentbit.container.image }}
     tag: {{ fluentbit.container.tag }}
     includes:
