--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/app/config/security/roles_mapping.yml.j2
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/app/config/security/roles_mapping.yml.j2
@@ -45,8 +45,8 @@ manage_snapshots:
 
 kibana_server:
   reserved: true
-  users:
-  - "kibanaserver"
+  backend_roles:
+  - "kibana_server"
 
 readall_and_monitor:
   reserved: true
