--- a/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/ingress.yaml.j2
@@ -5,8 +5,6 @@ metadata:
   namespace: logging
   labels:
     app: kibana
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
 spec:
   tls:
     - hosts:
@@ -16,7 +14,7 @@ spec:
   - host: infra.{{ web_base_domain }}
     http:
       paths:
-        - path: {{ kibana.context_path }}/?(.*)
+        - path: {{ kibana.context_path }}
           backend:
             serviceName: kibana
             servicePort: 5601
