Add workaround for the Kibana type mapping

--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/app/config/security/config.yml.j2
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/app/config/security/config.yml.j2
@@ -68,7 +68,7 @@ config:
     kibana:
       multitenancy_enabled: false
       server_username: {{ kibana.elasticsearch.user }}
-      index: '.kibana'
+      index: '{{ kibana.elasticsearch.index }}'
     http:
       anonymous_auth_enabled: false
       xff:
