Prepare Kibana multitenancy variables

--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/app/config/security/config.yml.j2
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/app/config/security/config.yml.j2
@@ -66,7 +66,7 @@ config:
     #filtered_alias_mode: warn
     do_not_fail_on_forbidden: false
     kibana:
-      multitenancy_enabled: false
+      multitenancy_enabled: {{ kibana.multitenancy.enabled }}
       server_username: {{ kibana.elasticsearch.user }}
       index: '{{ kibana.elasticsearch.index }}'
     http:
