--- a/ansible/install_applications/roles/logging-kibana.deploy/app/config/kibana.yml.j2
+++ b/ansible/install_applications/roles/logging-kibana.deploy/app/config/kibana.yml.j2
@@ -116,10 +116,14 @@ elasticsearch.requestHeadersWhitelist: ["securitytenant","Authorization"]
 # Supported languages are the following: English - en , by default , Chinese - zh-CN . 
 #i18n.locale: "en"
 
-
+{% if kibana.multitenancy.enabled %}
+opendistro_security.multitenancy.enabled: true
+opendistro_security.multitenancy.tenants.enable_global: true
+opendistro_security.multitenancy.tenants.enable_private: true
+opendistro_security.multitenancy.tenants.preferred: ["Private", "Global"]
+opendistro_security.multitenancy.enable_filter: false
+{% else %}
 opendistro_security.multitenancy.enabled: false
-#opendistro_security.multitenancy.tenants.enable_global: true
-#opendistro_security.multitenancy.tenants.enable_private: true
-#opendistro_security.multitenancy.tenants.preferred: ["Private", "Global"]
-#opendistro_security.multitenancy.enable_filter: false
+{% endif %}
+
 opendistro_security.readonly_mode.roles: ["kibana_read_only"]
