--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -257,6 +257,8 @@ watchers:
     tag: {{ fluentd.container.from_tag }}
     includes:
       - v[1-9]\.[0-9]+\.[0-9]+.*debian.*
+    excludes:
+      - v1\.[0-4]\..*
   - type: docker_registry
     repo: registry-1.docker.io
     image: {{ kibana.container.image }}
