Add watcher for release_watcher Watcher-ception !!

--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -1,5 +1,9 @@
 watchers:
   - type: github_commit
+    repo: Neraud/release-watcher
+    branch: master
+    commit: {{ release_watcher.repo.version }}
+  - type: github_commit
     repo: spotify/docker-gc
     branch: master
     commit: d1d11ee8afe7be2bfca9a0041d1eaa45c90ab9ae
