Add watcher for ansible

--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -1,4 +1,10 @@
 watchers:
+  - type: pypi
+    package: ansible
+    version: 2.8.2
+    excludes: 
+      - .*[ab][1-9]$
+      - .*rc[1-9]$
   - type: github_commit
     repo: Neraud/release-watcher
     branch: master
