--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -1,10 +1,18 @@
 watchers:
+
+  ###################
+  # Native on hosts #
+  ###################
   - type: pypi
     package: ansible
     version: 2.8.3
     excludes: 
       - .*[ab][1-9]$
       - .*rc[1-9]$
+  
+  #################################
+  # Installed by ansible on hosts #
+  #################################
   - type: github_commit
     repo: Neraud/release-watcher
     branch: master
@@ -21,7 +29,10 @@ watchers:
     repo: gluster/gluster-prometheus
     branch: master
     commit: 04465afa2405d1b5248beb50dc5fdceb84d2c8ed
-  # Auth
+  
+  ###############
+  # Apps : Auth #
+  ###############
   - type: docker_registry
     repo: registry-1.docker.io
     image: {{ lemonldap.container.from_image }}
@@ -44,7 +55,10 @@ watchers:
     excludes:
       - latest
       - ^0\.[1-7]\.
-  # Dev
+  
+  ##############
+  # Apps : Dev #
+  ##############
   - type: docker_registry
     repo: registry-1.docker.io
     image: {{ gitlab.container.image }}
@@ -56,7 +70,10 @@ watchers:
       - .*-rc[0-9]+.*
       - ^[1-9]\.
       - ^1[01]\.
-  # Download
+  
+  ###################
+  # Apps : Download #
+  ###################
   - type: docker_registry
     repo: registry-1.docker.io
     image: {{ deluge.container.image }}
@@ -90,7 +107,10 @@ watchers:
       - amd64.*
     excludes:
       - amd64-latest
-  # Home
+  
+  ###############
+  # Apps : Home #
+  ###############
   - type: docker_registry
     repo: registry-1.docker.io
     image: {{ homeassistant.container.from_image }}
@@ -138,7 +158,10 @@ watchers:
     excludes:
       - .*arm32
       - 0\..*
-  # Infra
+
+  ################
+  # Apps : Infra #
+  ################
   # TODO KO
   #  - type: docker_registry
   #    repo: k8s.gcr.io
@@ -241,7 +264,10 @@ watchers:
     excludes:
       - 10\.[0-9]\..*
       - 10\.1[0-5]\..*
-  # Logging
+  
+  ##################
+  # Apps : Logging #
+  ##################
   - type: docker_registry
     repo: registry-1.docker.io
     image: {{ elasticsearch.container.image }}
@@ -283,11 +309,17 @@ watchers:
     excludes:
       - latest
       - ^0\..*
-  # Monitoring
+  
+  #####################
+  # Apps : Monitoring #
+  #####################
   - type: github_release
     repo: coreos/kube-prometheus
     release: v0.1.0
-  # Stream
+    
+  #################
+  # Apps : Stream #
+  #################
   - type: docker_registry
     repo: registry-1.docker.io
     image: {{ airsonic.container.image }}
@@ -305,7 +337,10 @@ watchers:
     excludes:
       - 1\.[0-9]\.
       - 1\.1[0-5]\.
-  # Web
+  
+  ##############
+  # Apps : Web #
+  ##############
   - type: docker_registry
     repo: registry-1.docker.io
     image: {{ heimdall.container.from_image }}
