--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/alertmanager/alertmanager.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/alertmanager/alertmanager.yaml.j2
@@ -8,7 +8,7 @@ metadata:
   name: main
   namespace: monitoring
 spec:
-  baseImage: "{{ alertmanager.container.image }}"
+  baseImage: "{{ alertmanager.container.repo }}/{{ alertmanager.container.image }}"
   version: "{{ alertmanager.container.tag }}"
   nodeSelector:
     beta.kubernetes.io/os: linux
