--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/prometheus.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/prometheus.yaml.j2
@@ -13,7 +13,7 @@ spec:
     - name: alertmanager-main
       namespace: monitoring
       port: web
-  baseImage: "{{ prometheus.container.image }}"
+  baseImage: "{{ prometheus.container.repo }}/{{ prometheus.container.image }}"
   version: "{{ prometheus.container.tag }}"
   nodeSelector:
     beta.kubernetes.io/os: linux
