--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -317,6 +317,10 @@ watchers:
     repo: coreos/kube-prometheus
     branch: master
     commit: a536114bf3e0e4c8f19a555685e95fb5c11e4ec8
+  - type: github_commit
+    repo: kubernetes-monitoring/kubernetes-mixin
+    branch: master
+    commit: 3a6af8f5e9b16441308bcd57ad3f5bcaa03d1d68
   
   # The monitoring stack is deployed using manifests generated from coreos/kube-prometheus
   #- type: docker_registry
